--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
 
+<script src="JS/Form.js"></script>
+<script src="JS/Player.js"></script>
+<script src="JS/Game.js"></script>
+
 <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
 
